<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEE2F8"
    android:orientation="vertical"
    tools:context=".presentation.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/toDecemberFragment"
        android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/InputNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sourceNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/sourceBase">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sourceBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResultTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        tools:text="65" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btResultToDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#40C4FF"
        android:text="@string/result">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:background="#FF5252"
        android:text="@string/clear">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.appcompat.widget.LinearLayoutCompat>